# symfony-docs-rag-test

./: .gitignore  AGENTS.md  HYBRID_REARCHITECTURE_PLAN.md  HYBRID_RETRIEVAL.md  HYBRID_RETRIEVAL_PLAN.md  LICENSE  PAGEINDEX_PLAN.md  PHP_SYMFONY_AI_MIGRATION_PLAN.md  README.md  RERANKER_FINETUNING_PLAN.md  analyze_summaries.py  benchmark_build.py  benchmark_run.py  bm25_common.py  chunk.py  docker-compose.llamacpp.yml  embed.py  hybrid_embed_summaries.py  hybrid_retrieve.py  hyde_common.py  pageindex_api.py  pageindex_build.py  pageindex_common.py  pageindex_fix_line_ranges.py  pageindex_linefix.py  pageindex_logic.md  pageindex_retrieval_logic.md  pageindex_retrieve.py  pyproject.toml  rag_answer.py  rerank_common.py  retrieve.py  web_app.py  web_hybrid_retriever.py
scripts/: check_strict_miss_alignment.py  prioritize_strict_miss_review.py  reanchor_question_spans.py  report_strict_miss_qa_quality.py
