[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docutils>=0.21",
    "chromadb>=0.5",
    "openai>=1.0",
    "rich>=13.0",
    "bm25s>=0.2.14",
    "FlagEmbedding>=1.3.2",
    "transformers<5",
    "flask>=3.0",
    "onnxruntime>=1.20",
    "huggingface-hub>=0.25",
    "einops>=0.8.2",
    "gunicorn>=25.1.0",
]
